Fixed officer NRIC application